posting and deleting tweet functionality added

--- a/fritter/views/index.hbs
+++ b/fritter/views/index.hbs
@@ -9,13 +9,12 @@
     <script src="/javascripts/helpers.js"></script>
     <script src="/javascripts/index.js"></script>
     <script src="/javascripts/users.js"></script>
+    <script src="/javascripts/tweets.js"></script>
 
   
   </head>
   <body>
     <div id="main-container">
-	<h1>{{title}}</h1>
-	<p>Welcome to {{title}}</p>
     </div>
 
   </body>
