--- a/fritter/templates/tweets.handlebars
+++ b/fritter/templates/tweets.handlebars
@@ -1,6 +1,20 @@
 <div id="tweets">
-
   <p>Welcome, {{currentUser}} (<a href="#" id="logout-link">logout</a>)</p>
+  
+  <div>
+    <div class="error"></div>
+    <label for="new-tweet-input">Add a new tweet:</label>
+    <input type="text" id="new-tweet-input" />
+    <button id="submit-new-tweet">Add</button>
+  </div>
+
+  <h1>My Tweets</h1>
+
+  {{#each tweets}}
+    {{> tweet}}
+  {{else}}
+    <p><em>No tweets yet!</em></p>
+  {{/each}}
 
 
 </div>
