--- a/fritter/templates/tweets.handlebars
+++ b/fritter/templates/tweets.handlebars
@@ -8,7 +8,7 @@
     <button id="submit-new-tweet">Add</button>
   </div>
 
-  <h1>My Tweets</h1>
+  <h1>Tweets</h1>
 
   {{#each tweets}}
     {{> tweet}}
