--- a/fritter/public/stylesheets/style.css
+++ b/fritter/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
   padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Avenir Next", Helvetica, Arial, sans-serif;
 }
 
 a {
