--- a/fritter/templates/tweet.handlebars
+++ b/fritter/templates/tweet.handlebars
@@ -1,4 +1,6 @@
 <div class="tweet" data-tweet-id={{_id}}>
-  <p>{{content}}</p>
+  <span style="color:blue">{{creator}} </span> <span>: {{content}}</span>
+  {{#if canDelete}}
   <a href="#" class="delete-tweet">Delete</a>
+  {{/if}}
 </div>
