following by name search works

--- a/templates/tweets.handlebars
+++ b/templates/tweets.handlebars
@@ -7,6 +7,12 @@
     <input type="text" id="new-tweet-input" />
     <button id="submit-new-tweet">Add</button>
   </div>
+    <label for="follow-user-input">Follow user:</label>
+    <input type="text" id="follow-user-input" />
+    <button id="submit-follow">Follow</button>
+  <div>
+    
+  </div>
 
   <h1>All Tweets</h1>
 
