--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,14 @@ a {
 .error {
 	color: red;
 }
+
+.left {
+	display: inline-block;
+	float:left;
+	width: 40%;
+}
+.right {
+	display: inline-block;
+	float: right;
+	width: 40%;
+}
